Rebalance: Fix issues with widget block centre alignment.

--- a/rebalance/editor-blocks.css
+++ b/rebalance/editor-blocks.css
@@ -738,9 +738,11 @@
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-[data-align="center"] .wp-block-archives ul,
-[data-align="center"] .wp-block-latest-posts ul,
-[data-align="center"] .wp-block-categories ul {
+/* General Widget styles */
+
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
 	list-style-position: inside;
 }
 
